chore: bump dependencies version
fix: change closing button tag to button and change Redis Queue to Celery

--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Flask + Redis Queue + Docker{% block title %}{% endblock %}</title>
+    <title>Flask + Celery + Docker{% block title %}{% endblock %}</title>
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
