--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -9,9 +9,9 @@
     <h3>Tasks</h3>
     <p>Pick a task length.</p>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary" onclick="handleClick(1)">Short</a>
-      <button type="button" class="btn btn-primary" onclick="handleClick(2)">Medium</a>
-      <button type="button" class="btn btn-primary" onclick="handleClick(3)">Long</a>
+      <button type="button" class="btn btn-primary" onclick="handleClick(1)">Short</button>
+      <button type="button" class="btn btn-primary" onclick="handleClick(2)">Medium</button>
+      <button type="button" class="btn btn-primary" onclick="handleClick(3)">Long</button>
     </div>
   </div>
   <br><br>
